<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.MainActivity"
    android:background="@color/cardview_dark_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:text="@string/app_name"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            >

            <EditText
                android:id="@+id/first_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/placeholder"
                 />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            >

            <EditText
                android:id="@+id/second_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/placeholder"

                 />
        </androidx.cardview.widget.CardView>



            <Button
                android:id="@+id/compare_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compare_button"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="60dp"
                android:textSize="25dp"
                />





            <TextView
                android:id="@+id/result_compare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                />



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>